2009-03-20  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Cached TransferStat/download speed to avoid to sum them up in each
	call.	
	* src/DefaultPeerStorage.cc
	* src/DefaultPeerStorage.h
	* src/SegmentMan.cc
	* src/SegmentMan.h

2009-03-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Typedefed cuid_t as int32_t in Command.h
	* src/CUIDCounter.h
	* src/Command.cc
	* src/Command.h
	* src/DownloadEngine.cc
	* src/DownloadEngine.h
	* src/PeerStat.h
	* src/SegmentMan.cc
	* src/SegmentMan.h

2009-03-19  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Reduced the number of calls to PeerStorage::calculateStat() and
	SegmentMan::calculateDownloadSpeed() to lower CPU usage on higher
	transfer rate.	
	* src/DefaultBtInteractive.cc
	* src/DefaultBtMessageDispatcher.cc
	* src/DefaultPeerStorage.cc
	* src/DefaultPeerStorage.h
	* src/DownloadCommand.cc
	* src/DownloadEngine.cc
	* src/PeerStorage.h
	* src/SegmentMan.cc
	* src/SegmentMan.h
	* test/MockPeerStorage.h
	
2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Prepended _dir+"/" after joining path elements in torrent file.
	* src/DefaultBtContext.cc
	* test/DefaultBtContextTest.cc
	
2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added missing IndexBtMessageValidator.h
	* src/Makefile.am

2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Indonesian, Russian, Italian, Ukrainian and Simplified
	Chinese translations. Thank you for contributing our project.
	* po/id.po
	* po/it.po
	* po/ru.po
	* po/uk.po
	* po/zh_CN.po
	
2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated README
	* README

2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.3.0
	* configure.ac

2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated doc
	* src/DefaultBtContext.h

2009-03-13  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
